Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -381,12 +381,14 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+*************** TOP ****************
 DATA: gs_variant TYPE disvariant,
       gv_save    TYPE c LENGTH 1.
 
 gs_variant-report = sy-cprog.
 gv_save = 'A'.   " Global / Local 모두 저장
 
+*************** PBO ****************
 CALL METHOD go_alv_grid->set_table_for_first_display
   EXPORTING
     is_variant = gs_variant
@@ -412,12 +414,14 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+*************** TOP ****************
 DATA gv_variant TYPE disvariant.
 PARAMETERS pa_lv TYPE disvariant-variant.
 
 gv_variant-report  = sy-cprog.
 gv_variant-variant = pa_lv.
 
+*************** PBO ****************
 CALL METHOD go_alv_grid->set_table_for_first_display
   EXPORTING
     is_variant = gv_variant
