Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -525,6 +525,10 @@ INCLUDE ZPROGB03_0029_F01.
 
 **2) `TOP` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gt_data TYPE TABLE OF sbook,
       gs_data LIKE LINE OF gt_data.
 
@@ -550,6 +554,10 @@ START-OF-SELECTION.
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_F01
+*&---------------------------------------------------------------------*
+
 FORM set_options.
   so_fdt-sign = 'I'.
   so_fdt-option = 'BT'.
@@ -587,6 +595,10 @@ ENDFORM.
 - `SY-DATUM` : 현재 시스템 날짜 (`YYYYMMDD`)
 - `SY-UZEIT` : 현재 시스템 시간 (`HHMMSS`)
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
@@ -653,6 +665,10 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0029_I01
+*&---------------------------------------------------------------------*
+
 MODULE exit INPUT.
   CASE OK_CODE.
     WHEN 'EXIT'.
@@ -717,6 +733,10 @@ CALL SCREEN 100.
 
 **2) `TOP` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_TOP
+*&---------------------------------------------------------------------*
+
 DATA: OK_CODE TYPE sy-ucomm,
       go_container TYPE REF TO cl_gui_custom_container,
       go_alv_grid TYPE REF TO cl_gui_alv_grid.
@@ -735,6 +755,10 @@ SELECT-OPTIONS: so_car FOR gs_flight-carrid,
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_F01
+*&---------------------------------------------------------------------*
+
 FORM get_data.
   SELECT * FROM sflight
     INTO TABLE gt_flight
@@ -773,6 +797,10 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100'.
@@ -838,6 +866,10 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -878,12 +910,16 @@ ENDMODULE.
 
 ### 실습 3
 - Variat 실습
+- 실습 2에서 이어서 진행
 </br>
 
 **1) `TOP` 모듈 수정**
 ```abap
-DATA: gs_variant TYPE disvariant.
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_TOP
+*&---------------------------------------------------------------------*
 
+DATA: gs_variant TYPE disvariant.
 PARAMETERS: pa_va TYPE disvariant-variant.
 ```
 </br>
@@ -891,6 +927,10 @@ PARAMETERS: pa_va TYPE disvariant-variant.
 
 **2) `PBO` 의 `create_and_transfer` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_O01
+*&---------------------------------------------------------------------*
+
 gs_variant-report = sy-cprog.
 gs_variant-variant = pa_va.
 
