--- a/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
@@ -393,25 +393,39 @@ TYPE-POOLS COL.
 - `<intensified>` : 진하게 표시 (1) / 기본 (0)
 - `<inverse>` : 글자색 ↔ 배경색 반전 (1) / 기본 (0)
 ```abap
+********* TOP *********
 TYPE-POOLS col.
 
-TYPES: BEGIN OF gty_booking,
-         INCLUDE TYPE sbook,
-         color TYPE c LENGTH 4,
-       END OF gty_booking.
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: col_fld TYPE char4, "예시)'C310'
+     END OF gs_data.
+DATA gt_data LIKE TABLE OF gs_data.
+DATA gs_layout TYPE lvc_s_layo.
 
-DATA: gs_booking TYPE gty_booking,
-      gt_booking TYPE TABLE OF gty_booking,
-      gs_layout  TYPE lvc_s_layo.
+********* F01 *********
+FORM get_data.
+    LOOP AT gt_data INTO gs_data.
+      IF gs_data-smoker = 'X'.
+        gs_data-col_fld = 'C' && col_negative && '10'.
+      ENDIF.
+      MODIFY gt_data FROM gs_data.
+      CLEAR: gs_data.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
 
-gs_booking-color = 'C' && col_negative && '10'.
-gs_layout-info_fname = 'COLOR'.
+********* F01 *********
+FORM set_layout.
+  gs_layout-info_fname = 'COL_FLD'. 
+ENDFORM.
 
-CALL METHOD go_alv_grid->set_table_for_first_display
+********* PBO *********
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
-    is_layout = gs_layout
+    is_layout                     = gs_layout
   CHANGING
-    it_outtab = gt_booking.
+    it_outtab                     = gt_data
 ```
 </br>
 </br>
@@ -479,55 +493,41 @@ CALL METHOD go_alv_grid->set_table_for_first_display
     it_outtab = <gt_data>.
 ```
 ```abap
-" 1. 출력 구조
+********* TOP *********
+TYPE-POOLS col.
+
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
-DATA: excp_fld TYPE char1,
-      col_fld  TYPE char4,        " 예: 'C310'
-      lt_scol  TYPE lvc_t_scol,   " 셀 색상
+DATA: lt_scol TYPE lvc_t_scol,   " 셀 색상 정보 (행 단위)
      END OF gs_data.
-
 DATA gt_data LIKE TABLE OF gs_data.
-DATA ls_scol TYPE lvc_s_scol.
+DATA ls_scol TYPE lvc_s_scol.    " 셀 1개 색상 구조
+DATA gs_layout TYPE lvc_s_layo.
 
+********* F01 *********
+FORM get_data.
+  LOOP AT gt_data INTO gs_data.
+    IF gs_data-smoker = 'X'.
+      CLEAR ls_scol.
+      ls_scol-fname = 'SMOKER'.      " 색칠할 컬럼
+      ls_scol-color-col = '3'.       " 색상 번호
+      ls_scol-color-int = '1'.       " 진하게
+      ls_scol-color-inv = '0'.       " 반전 없음
+      APPEND ls_scol TO gs_data-lt_scol.
+    ENDIF.
+    MODIFY gt_data FROM gs_data.
+    CLEAR gs_data.
+  ENDLOOP.
+ENDFORM.
 
-" 2. 셀 색상 처리
-LOOP AT gt_data INTO gs_data.
+FORM set_layout.
+  gs_layout-ctab_fname = 'LT_SCOL'.  
+ENDFORM.
 
-  IF gs_data-loccuram < 500.
-    gs_data-excp_fld = '1'.
-  ELSEIF gs_data-loccuram >= 500 AND gs_data-loccuram <= 800.
-    gs_data-excp_fld = '2'.
-  ELSE.
-    gs_data-excp_fld = '3'.
-  ENDIF.
+********* PBO *********
+PERFORM set_layout.
 
-  IF gs_data-smoker = 'X'.
-
-*   Line Color
-    gs_data-col_fld = 'C' && col_negative && '10'.
-
-*   Cell Color (SMOKER 셀만)
-    ls_scol-fname      = 'SMOKER'.
-    ls_scol-color-col  = col_negative.
-    ls_scol-color-int  = '1'.
-    ls_scol-color-inv  = '0'.
-
-    APPEND ls_scol TO gs_data-lt_scol.
-  ENDIF.
-
-  MODIFY gt_data FROM gs_data
-    TRANSPORTING excp_fld col_fld lt_scol.
-
-  CLEAR gs_data.
-ENDLOOP.
-
-
-" 3. Layout 연결
-gs_layout-ctab_fname = 'LT_SCOL'.
-
-" 4. ALV 출력
-CALL METHOD go_alv_grid->set_table_for_first_display
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
     is_layout = gs_layout
   CHANGING
@@ -535,289 +535,13 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 ```
 </br>
 </br>
-
----
-
 </br>
 
-## < ABAP 객체 생성 기본 문법 예제 >
-</br>
-
-**1) `TOP` 모듈 수정**
-- `SY-REPID` : 현재 실행 중인 ABAP 프로그램명(Report ID)
-```abap
-TYPE-POOLS COL.
-
-TABLES: SDYN_CONN.
-
-DATA: BEGIN OF gs_data.
-        INCLUDE TYPE sbook.
-DATA: excp_fld TYPE char1,
-      col_fld TYPE char4, "예시)'C310'
-      lt_scol TYPE LVC_T_SCOL,
-     END OF gs_data.
-DATA gt_data LIKE TABLE OF gs_data.
-DATA ls_scol TYPE LVC_S_SCOL.
-
-DATA: ok_code TYPE sy-ucomm,
-      go_cont TYPE REF TO cl_gui_custom_container,
-      go_alv  TYPE REF TO cl_gui_alv_grid.
-DATA: gs_variant TYPE disvariant,
-      gs_stable TYPE LVC_S_STBL,
-      gs_layout TYPE LVC_S_LAYO, " 레이아웃
-      gt_sorter TYPE LVC_T_SORT, " 정렬(itab)
-      gs_sorter TYPE LVC_S_SORT, " 정렬(str)
-      gt_filter TYPE LVC_T_FILT, " 필터(itab)
-      gs_filter TYPE LVC_S_FILT. " 필터(str)
-
-SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
-  SELECT-OPTIONS: so_car FOR gs_data-carrid,
-                  so_con FOR gs_data-connid,
-                  so_fdt FOR gs_data-fldate.
-SELECTION-SCREEN END OF BLOCK blk1.
-
-SELECTION-SCREEN BEGIN OF SCREEN 1100 AS SUBSCREEN.
-  SELECT-OPTIONS: so_car2 FOR SDYN_CONN-CARRID DEFAULT 'DL',
-                  so_con2 FOR SDYN_CONN-CONNID.
-SELECTION-SCREEN END OF SCREEN 1100.
-
-INITIALIZATION.
-  PERFORM set_options.
-  gs_variant-report = sy-repid.
-  gs_variant-username = sy-uname.
-  gs_variant-handle = 'MAIN'.
-  " handle : 하나의 화면에 여러개의 ALV가 있는 경우
-  "          각 ALV마다 구분자가 필요하므로 구분자 지정해줌
-
-START-OF-SELECTION.
-  PERFORM GET_DATA.
-  CALL SCREEN 100.
-```
-</br>
-</br>
-
-**2) `F01` 모듈 수정**
-```abap
-FORM set_options.
-  so_fdt-sign = 'I'.
-  so_fdt-option = 'BT'.
-  so_fdt-low = sy-datum(4) && '0101'. " 매년 첫째날
-  so_fdt-high = sy-datum(4) && '1231'. " 매년 마지막날
-  APPEND so_fdt.
-
-  so_car-sign = 'I'.
-  so_car-option = 'GT'.
-  so_car-low = 'AZ'.
-  APPEND so_car.
-
-  CLEAR so_car.
-  so_car-sign = 'E'.
-  so_car-option = 'EQ'.
-  so_car-low = 'LH'.
-  APPEND so_car.
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM get_data.
-  SELECT * FROM SBOOK
-    INTO CORRESPONDING FIELDS OF TABLE gt_data
-    WHERE carrid IN so_car
-      AND connid IN so_con
-      AND fldate IN so_fdt.
-  IF sy-subrc <> 0.
-    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
-  ELSE.
-    LOOP AT gt_data INTO gs_data.
-      IF gs_data-loccuram < 500.
-        gs_data-EXCP_FLD = '1'. " 빨강
-      ELSEIF gs_data-loccuram >= 500 AND gs_data-loccuram <= 800.
-        gs_data-EXCP_FLD = '2'. " 노랑
-      ELSE.
-        gs_data-EXCP_FLD = '3'. " 초록
-      ENDIF.
-
-      IF gs_data-smoker = 'X'.
-        gs_data-col_fld = 'C' && col_negative && '10'.
-
-*        smoker 필드에 대해 색상 정리
-        ls_scol-fname = 'SMOKER'.
-        ls_scol-color-col = '3'.
-        ls_scol-color-int = '1'.
-        ls_scol-color-inv = '0'.
-
-        APPEND ls_scol TO gs_data-lt_scol.
-      ENDIF.
-
-      MODIFY gt_data FROM gs_data TRANSPORTING EXCP_FLD col_fld lt_scol.
-      CLEAR gs_data.
-    ENDLOOP.
-  ENDIF.
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM set_layout.
-  gs_layout-grid_title = 'Booking List'. " Title 적용
-  gs_layout-zebra = 'X'.  " Row 구분색 적용
-  gs_layout-cwidth_opt = 'X'. " 컬럼너비 최적화
-  gs_layout-totals_bef = 'X'. " 합계 맨 위로
-  gs_layout-sel_mode = 'A'. " _,A,B,C,D 선택모드
-
-  gs_layout-excp_fname = 'EXCP_FLD'. " 변수명 알려줌
-  gs_layout-excp_led = 'X'.
-  gs_layout-info_fname = 'COL_FLD'. " 변수명 알려줌
-  gs_layout-ctab_fname = 'LT_SCOL'. " 변수명 알려줌
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM set_sorter.
-  IF gt_sorter IS INITIAL.
-    gs_sorter-fieldname = 'ORDER_DATE'.
-    gs_sorter-spos = 1.
-    gs_sorter-up = 'X'. " 오름차순 (기본)
-    APPEND gs_sorter TO gt_sorter. " itab 맨 마지막에 추가
-
-    CLEAR gs_sorter.
-    gs_sorter-fieldname = 'LOCCURAM'.
-    gs_sorter-spos = 2.
-    gs_sorter-down = 'X'. " 내림차순
-    APPEND gs_sorter TO gt_sorter.
-  ENDIF.
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM set_filter.
-  CLEAR: gt_filter, gs_filter.
-
-  IF so_car2 IS NOT INITIAL.
-    LOOP AT so_car2.
-      gs_filter-fieldname = 'CARRID'.
-      gs_filter-sign = so_car2-sign.
-      gs_filter-option = so_car2-option.
-      gs_filter-low = so_car2-low.
-      gs_filter-high = so_car2-high.
-      APPEND gs_filter TO gt_filter.
-    ENDLOOP.
-  ENDIF.
-
-  IF so_con2 IS NOT INITIAL.
-    CLEAR gs_filter.
-    LOOP AT so_con2.
-      gs_filter-fieldname = 'CONNID'.
-      gs_filter-sign = so_con2-sign.
-      gs_filter-option = so_con2-option.
-      gs_filter-low = so_con2-low.
-      gs_filter-high = so_con2-high.
-      APPEND gs_filter TO gt_filter.
-    ENDLOOP.
-  ENDIF.
-
-  " 만약 sorter도 화면 출력 이후에 변경하고자 한다면,
-  " => set_sorter_criteria 사용
-  CALL METHOD go_alv->set_filter_criteria
-    EXPORTING
-      it_filter = gt_filter
-    EXCEPTIONS
-      no_fieldcatalog_available = 1
-      OTHERS                    = 2.
-  IF sy-subrc <> 0.
-    MESSAGE 'Filter 적용 중 에러 발생' TYPE 'E'.
-  ENDIF.
-ENDFORM.
-```
-</br>
-</br>
-
-**3) `PBO` 모듈 수정**
-- ALV 화면을 새로 고침하는 메서드 호출
-  
-<img width="289" height="278" alt="image" src="https://github.com/user-attachments/assets/897d99d2-81ef-4170-8df4-279379ebac4a" />
-</br>
-</br>
-
-```abap
-MODULE init_alv OUTPUT.
-  " 1. 100번 스크린 Layout에 Area 추가
-  " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
-  "    Custom Container 생성
-  IF go_cont IS INITIAL.
-    CREATE OBJECT go_cont
-      EXPORTING
-        container_name              = 'AREA'
-      EXCEPTIONS
-        cntl_error                  = 1
-        cntl_system_error           = 2
-        create_error                = 3
-        lifetime_error              = 4
-        lifetime_dynpro_dynpro_link = 5
-        others                      = 6.
-    IF sy-subrc <> 0.
-    ENDIF.
-
-    " 3. ALV Grid 객체 생성해서 Container와 연결
-    CREATE OBJECT go_alv
-      EXPORTING
-        i_parent          = go_cont
-      EXCEPTIONS
-        error_cntl_create = 1
-        error_cntl_init   = 2
-        error_cntl_link   = 3
-        error_dp_create   = 4
-        others            = 5.
-    IF sy-subrc <> 0.
-    ENDIF.
-
-    PERFORM set_layout.
-    PERFORM set_sorter.
-    " 4. ALV Grid 안에 Data display
-    CALL METHOD go_alv->set_table_for_first_display
-      EXPORTING
-        i_structure_name              = 'SBOOK'
-        is_variant                    = gs_variant
-        i_save                        = 'A' "A, X, U, ''
-        i_default                     = 'X'
-        is_layout                     = gs_layout
-      CHANGING
-        it_outtab                     = gt_data
-        it_sort                       = gt_sorter
-*        it_filter                    = 최초 조회시 기본필터 적용 가능
-      EXCEPTIONS
-        invalid_parameter_combination = 1
-        program_error                 = 2
-        too_many_lines                = 3
-        others                        = 4.
-
-    IF sy-subrc <> 0.
-    ENDIF.
-  ELSE.
-    gs_stable-row = 'X'.
-    gs_stable-col = 'X'.
-
-    CALL METHOD go_alv->refresh_table_display
-      EXPORTING
-        is_stable      = gs_stable
-        i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
-                             " _ : 전체 리프레쉬 (기본)
-      EXCEPTIONS
-        finished       = 1
-        others         = 2.
-
-    IF sy-subrc <> 0.
-      MESSAGE 'Data refresh 중 Error 발생' TYPE 'E'.
-    ENDIF.
-
-  ENDIF.
-ENDMODULE.
-```
-</br>
-</br>
-
-**4) 결과 확인**
+### 8) 결과 확인
 
 <img width="536" height="370" alt="image" src="https://github.com/user-attachments/assets/e036f5f4-8676-4972-9727-f6f3954d72af" />
+
+</br>
 </br>
 </br>
 </br>
