Update 2-4. 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
@@ -672,9 +672,11 @@ ENDMODULE.
 
 **1) `TOP` 모듈 수정**
 ```abap
-DATA: gs_variant TYPE disvariant,
-      gs_stable TYPE LVC_S_STBL,
-      gs_layout TYPE LVC_S_LAYO.
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_TOP
+*&---------------------------------------------------------------------*
+
+DATA: gs_layout TYPE LVC_S_LAYO.
 
 DATA: BEGIN OF gs_flight.
         INCLUDE TYPE sflight.
