Update 2-4. 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/2-4. 프로그래밍 전용 리포트 개발(12.29).md
@@ -692,6 +692,10 @@ DATA: ls_col TYPE LVC_S_SCOL.
 
 **2) `F01` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_F01
+*&---------------------------------------------------------------------*
+
 FORM get_data.
   SELECT * FROM sflight
     INTO CORRESPONDING FIELDS OF TABLE gt_flight
@@ -751,6 +755,10 @@ ENDFORM.
 
 **3) `PBO` 모듈**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_O01
+*&---------------------------------------------------------------------*
+
 PERFORM set_layout.
     CALL METHOD go_alv_grid->set_table_for_first_display
       EXPORTING
