Update 2-5. 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/2-5. 프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/2-5. 프로그래밍 전용 리포트 개발(12.30).md
@@ -612,6 +612,10 @@ START-OF-SELECTION.
 
 **2) `TOP` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE7_TOP
+*&---------------------------------------------------------------------*
+
 DATA: OK_CODE TYPE sy-ucomm.
 
 DATA: go_cont TYPE REF TO cl_gui_custom_container,
@@ -644,6 +648,10 @@ SELECTION-SCREEN END OF BLOCK blk1.
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE7_F01
+*&---------------------------------------------------------------------*
+
 FORM set_data.
   SELECT *
     FROM sflight
@@ -721,6 +729,10 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE7_O01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
 * SET TITLEBAR 'xxx'.
@@ -774,6 +786,10 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE7_I01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
