Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -354,11 +354,41 @@ ENDMETHOD.
 
 ### 2) set_user_command
 - USER_COMMAND 값을 강제로 세팅하여 해당 USER_COMMAND 이벤트를 실행시키는 메서드
+
+<img width="34" height="29" alt="image" src="https://github.com/user-attachments/assets/232a14e6-7938-429f-9d88-57338d1bd4d0" />
+</br>
+
 ```abap
 *************** C01 ****************
 CALL METHOD <alv_grid>->set_user_command
   EXPORTING
     i_ucomm = <FUNCTION_CODE>.
+```
+```abap
+*************** C01 ****************
+CLASS-METHODS on_before_user_command
+  FOR EVENT before_user_command OF cl_gui_alv_grid
+  IMPORTING e_ucomm.
+CLASS-METHODS on_user_command
+  FOR EVENT user_command OF cl_gui_alv_grid
+  IMPORTING e_ucomm.
+
+METHOD on_before_user_command.
+  CASE e_ucomm.
+    WHEN go_alv->mc_fc_detail.   " ALV 표준 Detail 버튼 클릭 시
+      CALL METHOD go_alv->set_user_command
+        EXPORTING
+          i_ucomm = 'SHOW_BOOK'.  " USER_COMMAND 강제 세팅
+    WHEN OTHERS.
+  ENDCASE.
+ENDMETHOD.
+METHOD on_user_command.
+  CASE e_ucomm.
+    WHEN 'SHOW_BOOK'.            " set_user_command로 유도된 명령
+      MESSAGE 'Show-book 클릭되었습니다' TYPE 'I'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMETHOD.
 ```
 </br>
 </br>
