Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -392,6 +392,48 @@ ENDMETHOD.
 ```
 </br>
 </br>
+</br>
+
+### 3) get_selected_rows
+- ALV에서 사용자가 선택(체크/드래그)한 행들의 인덱스 목록을 가져오는 메서드
+```abap
+*************** C01 ****************
+CALL METHOD <alv_grid>->get_selected_rows
+  IMPORTING
+    et_index_rows = <selected_rows>.
+```
+```abap
+*************** PAI ****************
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'SELECT'.
+      DATA: lt_select_data TYPE LVC_T_ROW,
+            ls_select_data TYPE LVC_S_ROW.
+      DATA: lt_data LIKE gt_data,
+            ls_data LIKE gs_data.
+
+      CALL METHOD go_alv->get_selected_rows
+        IMPORTING
+          et_index_rows = lt_select_data.
+
+      IF lt_select_data IS NOT INITIAL.
+        LOOP AT lt_select_data INTO ls_select_data.
+          READ TABLE gt_data INTO ls_data
+          INDEX ls_select_data-index.
+          IF sy-subrc = 0.
+            APPEND ls_data TO lt_data.
+          ENDIF.
+        ENDLOOP.
+        cl_demo_output=>display( lt_data ).
+      ELSE.
+        MESSAGE 'Please select record' TYPE 'E'.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
 
 </br>
 </br>
