Update 2-6. 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
@@ -231,7 +231,7 @@ SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
 **1) `F01` 모듈 수정**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          ZBC405_03_ALV_F01
+*& Include          ZBC405_03_ALV3_F01
 *&---------------------------------------------------------------------*
 
 FORM set_fcat.
@@ -247,7 +247,7 @@ ENDFORM.
 **2) `C01` 모듈 수정**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          ZBC405_03_ALV_C01_3
+*& Include          ZBC405_03_ALV3_C01_3
 *&---------------------------------------------------------------------*
 
 CLASS lcl_event_handler DEFINITION.
@@ -296,7 +296,7 @@ endclass.
 **3) `PBO` 모듈 수정**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          ZBC405_03_ALV_O01
+*& Include          ZBC405_03_ALV3_O01
 *&---------------------------------------------------------------------*
 
 MODULE create_and_transfer OUTPUT.
