Update 2-6. 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
@@ -311,3 +311,12 @@ MODULE create_and_transfer OUTPUT.
         IT_FIELDCATALOG               = gt_fcat
 ENDMODULE.
 ```
+</br>
+
+**4) 결과 확인**
+- 더블클릭시 이벤트
+<img width="513" height="394" alt="image" src="https://github.com/user-attachments/assets/5e605617-f7f0-43bf-b979-bc7aaa143583" />
+</br>
+
+- 핫스팟 설정
+<img width="515" height="394" alt="image" src="https://github.com/user-attachments/assets/1e321642-c072-4eb0-a2e1-7458d965dd97" />
