Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -790,4 +790,112 @@ ENDMODULE.
 </br>
 
 <img width="472" height="193" alt="image" src="https://github.com/user-attachments/assets/69b1f9a6-1e38-40b3-b325-dd25f24d2f93" />
+</br>
+</br>
+</br>
+</br>
 
+### 실습 2
+- 전 exercise 코드에서 이어서 진행
+</br>
+</br>
+
+**1) `C01` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV4_C01_3
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS: on_toolbar FOR EVENT toolbar
+      OF cl_gui_alv_grid IMPORTING e_object,
+        on_user_command FOR EVENT user_command
+      OF cl_gui_alv_grid IMPORTING e_ucomm.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'PERCENTAGE'.
+    ls_button-text = '% total'.
+    ls_button-quickinfo = 'Total economy utilization'.
+    ls_button-butn_type = 0.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'PERCENTAGE_MARKED'.
+    ls_button-text = '% marked'.
+    ls_button-quickinfo = 'Economy utilization (marked flights)'.
+    ls_button-butn_type = 0.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD on_user_command.
+    DATA: gv_seatsocc TYPE I VALUE IS INITIAL,
+          gv_seatsmax TYPE I VALUE IS INITIAL,
+          gv_percentage TYPE P LENGTH 8 DECIMALS 2 VALUE IS INITIAL.
+    DATA: lt_select_data TYPE LVC_T_ROW,
+          ls_select_data TYPE LVC_S_ROW,
+          gs_select_flight LIKE gs_flight.
+    CASE E_UCOMM.
+      WHEN 'PERCENTAGE'.
+        LOOP AT gt_flight INTO gs_flight.
+          gv_seatsocc = gv_seatsocc + gs_flight-seatsocc.
+          gv_seatsmax = gv_seatsmax + gs_flight-seatsmax.
+        ENDLOOP.
+        gv_percentage = ( gv_seatsocc / gv_seatsmax ) * 100.
+        MESSAGE '총 좌석: ' && gv_percentage TYPE 'I'.
+      WHEN 'PERCENTAGE_MARKED'.
+        CALL METHOD go_alv_grid->get_selected_rows
+          IMPORTING et_index_rows = lt_select_data.
+        IF lt_select_data IS NOT INITIAL.
+          LOOP AT lt_select_data INTO ls_select_data.
+            READ TABLE gt_flight INTO gs_select_flight
+            INDEX ls_select_data-index.
+            gv_seatsocc = gv_seatsocc + gs_select_flight-seatsocc.
+            gv_seatsmax = gv_seatsmax + gs_select_flight-seatsmax.
+          ENDLOOP.
+          gv_percentage = ( gv_seatsocc / gv_seatsmax ) * 100.
+          MESSAGE '총 좌석: ' && gv_percentage TYPE 'I'.
+        ELSE.
+          MESSAGE 'Please select record' TYPE 'E'.
+        ENDIF.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**2) `PBO` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV4_O01
+*&---------------------------------------------------------------------*
+
+SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv_grid.
+SET HANDLER lcl_event_handler=>on_user_command FOR go_alv_grid.
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    i_structure_name              = 'SFLIGHT'
+  CHANGING
+    it_outtab                     = gt_flight
+  EXCEPTIONS
+    invalid_parameter_combination = 1
+    program_error                 = 2
+    too_many_lines                = 3
+    others                        = 4.
+```
+</br>
+
+**3) 결과 확인**
+
+<img width="510" height="349" alt="image" src="https://github.com/user-attachments/assets/2673cb36-cefa-4576-952e-98928d7e6b08" />
+</br>
+
+<img width="510" height="353" alt="image" src="https://github.com/user-attachments/assets/8ce97d02-ede4-4a4a-aa23-2f7286e3deb5" />
