Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -30,6 +30,8 @@
 | `5` | 체크박스 버튼 |
 | `6` | 메뉴 엔트리 |
 
+- `e_object` = ALV 툴바 자체를 담고 있는 객체 (여기에 버튼을 추가/삭제함)
+- `e_interactive` = 툴바 이벤트가 사용자 조작으로 발생했는지 알려주는 플래그
 ```abap
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
