Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -32,6 +32,7 @@
 
 - `e_object` = ALV 툴바 자체를 담고 있는 객체 (여기에 버튼을 추가/삭제함)
 - `e_interactive` = 툴바 이벤트가 사용자 조작으로 발생했는지 알려주는 플래그
+- `e_object->mt_toolbar` = ALV 툴바에 표시될 버튼 목록 테이블
 ```abap
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
