Update 2-7. 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/2-7. 프로그래밍 전용 리포트 개발(01.02).md
@@ -1,11 +1,11 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
-- **2) ALV Hotspot 이벤트 처리**
-</br>
+- **1) ALV 표준 툴바 확장 (TOOLBAR 이벤트)**
+- **2) ALV 셀 버튼(Button) 동적 생성 및 클릭 이벤트 처리**
+- **3) ALV USER_COMMAND 실행 전 제어 (before_user_command)**
+- **4) ALV Control 주요 메소드 (get_current_cell, set_user_command, get_selected_rows)**
 
-- **C01(INCLUDE)은 TOP 바로 아래에 두는 게 정석**
 </br>
 </br>
 
@@ -300,7 +300,7 @@ SET HANDLER lcl_event_handler=>on_before_user_command FOR go_alv.
 
 </br>
 
-## < ALV Control 주요 메소드 및 추가적인 이벤트 정리 >
+## < ALV Control 주요 메소드 >
 </br>
 
 - 메서드 = 객체의 상태를 조회하거나 동작을 수행하는 클래스 내부 함수
