Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -11,3 +11,33 @@
 </br>
 
 ## < ALV 이벤트 정리 >
+</br>
+
+```abap
+*************** TOP ****************
+DATA: <DOCKING_CONTAINER> TYPE REF TO cl_gui_docking_container,
+      <ALV_GRID>          TYPE REF TO cl_gui_alv_grid.
+
+DATA: <ITAB> TYPE TABLE OF <DDIC_STRUCTURE>.
+
+*************** Docking Container ****************
+IF <DOCKING_CONTAINER> IS INITIAL.
+  CREATE OBJECT <DOCKING_CONTAINER>
+    EXPORTING
+      side      = <DOCK_POSITION>
+      extension = <SIZE>
+      repid     = <PROGRAM_ID>
+      dynnr     = <SCREEN_NO>.
+
+  CREATE OBJECT <ALV_GRID>
+    EXPORTING
+      i_parent = <DOCKING_CONTAINER>.
+ENDIF.
+
+*************** Docking ALV 최초 출력 ****************
+CALL METHOD <ALV_GRID>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = <DDIC_STRUCTURE>
+  CHANGING
+    it_outtab        = <ITAB>.
+```
