--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -10,9 +10,11 @@
 
 </br>
 
-## < ALV 이벤트 정리 >
+## < ALV Docking Container 정리 >
 </br>
-
+- Docking Container 란 선택화면을 유지한 채 화면 가장자리에 ALV를 고정 표시하기 위한 컨테이너
+- `side` : 도킹 위치 (TOP / BOTTOM / LEFT / RIGHT)
+- `extension` : 도킹 영역 크기
 ```abap
 *************** TOP ****************
 DATA: <DOCKING_CONTAINER> TYPE REF TO cl_gui_docking_container,
