Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -47,3 +47,59 @@ CALL METHOD <ALV_GRID>->set_table_for_first_display
   CHANGING
     it_outtab        = <ITAB>.
 ```
+```abap
+*************** TOP ****************
+PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+DATA: gt_data TYPE TABLE OF sflight.
+
+*************** E01 ****************
+AT SELECTION-SCREEN OUTPUT.
+  IF go_docking IS INITIAL.
+    SELECT * FROM sflight INTO TABLE gt_data
+      UP TO 20 ROWS
+      WHERE carrid = pa_car.
+
+    CHECK sy-subrc = 0. " 참이면 아래 로직 실행
+    " Docking Container 생성
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 300
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+    " Docking Container에 ALV 생성
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+
+START-OF-SELECTION.
+  SELECT * FROM sflight INTO TABLE gt_data
+    UP TO 20 ROWS
+    WHERE carrid = pa_car.
+
+  IF sy-subrc = 0.
+    CALL METHOD go_alv->refresh_table_display
+      EXCEPTIONS
+        finished       = 1
+        others         = 2.
+    IF sy-subrc <> 0.
+      MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+```
