Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -47,6 +47,14 @@ CALL METHOD <ALV_GRID>->set_table_for_first_display
   CHANGING
     it_outtab        = <ITAB>.
 ```
+- `UP TO <ROW_COUNT> ROWS` = 조회 결과 중 최대 N건까지만 내부테이블에 담음 (성능/미리보기용)
+```abap
+SELECT *
+  FROM <DB_TABLE>
+  INTO TABLE <ITAB>
+  UP TO <ROW_COUNT> ROWS
+  WHERE <CONDITION>.
+```
 ```abap
 *************** TOP ****************
 PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
