Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -122,3 +122,9 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 1
+</br>
+
+- 문제
+<img width="356" height="196" alt="image" src="https://github.com/user-attachments/assets/4888e9dc-6d7b-43c1-ac54-52f8f3c76a29" />
+</br>
+</br>
