Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -128,3 +128,126 @@ START-OF-SELECTION.
 <img width="356" height="196" alt="image" src="https://github.com/user-attachments/assets/4888e9dc-6d7b-43c1-ac54-52f8f3c76a29" />
 </br>
 </br>
+
+**1) Report 프로그램에서 모듈 생성**
+```abap
+REPORT ZPROGB03_0031.
+
+INCLUDE ZPROGB03_0031_TOP.
+INCLUDE ZPROGB03_0031_O01.
+INCLUDE ZPROGB03_0031_I01.
+INCLUDE ZPROGB03_0031_F01.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm,
+      go_dock TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+
+DATA: gs_sflight TYPE sflight,
+      gt_sflight TYPE TABLE OF sflight.
+
+PARAMETERS: pa_car TYPE sflight-carrid DEFAULT 'AZ'.
+```
+</br>
+
+**3) `PBO` 및 `F01` 모듈 생성**
+```abap
+*************** PBO ****************
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ENDMODULE.
+
+MODULE init_alv OUTPUT.
+  IF go_dock IS INITIAL.
+    CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_dock.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_sflight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ELSE.
+    IF sy-subrc = 0.
+      CALL METHOD go_alv->refresh_table_display
+        EXCEPTIONS
+          finished       = 1
+          others         = 2.
+      IF sy-subrc <> 0.
+        MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+      ENDIF.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+
+*************** F01 ****************
+FORM get_data.
+  SELECT * FROM SFLIGHT
+    INTO TABLE gt_sflight
+    UP TO 30 ROWS
+    WHERE carrid = pa_car.
+ENDFORM.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_I01
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**5) 결과 확인**
+
+<img width="284" height="96" alt="image" src="https://github.com/user-attachments/assets/386d3fff-0177-4a29-b0ea-08e209effe26" />
+</br>
+
+<img width="366" height="208" alt="image" src="https://github.com/user-attachments/assets/51881235-5c05-4b25-8a63-0c8bf7a30a00" />
