Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -15,11 +15,10 @@
 
 ### 1) Docking Container 기반 ALV 화면 구성
 
-- Docking Container 란 선택화면을 유지한 채 화면 가장자리에 ALV를 고정 표시하기 위한 컨테이너
+- `Docking Container` : 선택화면을 유지한 채 화면 가장자리에 ALV를 고정 표시하기 위한 컨테이너
 - `side` : 도킹 위치 (TOP / BOTTOM / LEFT / RIGHT)
 - `extension` : 도킹 영역 크기
 - Docking Container 사용 시 → 별도의 AREA(스크린 영역) 필요 없음.
-- Custom Container 사용 시 → AREA 필수.
 
 ```abap
 *************** TOP ****************
