--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -117,7 +117,45 @@ START-OF-SELECTION.
 </br>
 
 ### 2) Splitter Container 기반 다중 ALV 구성
+```abap
+*************** TOP ****************
+DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
+      <SPLITTER_CONTAINER> TYPE REF TO cl_gui_splitter_container,
+      <LEFT_CONTAINER>     TYPE REF TO cl_gui_container,
+      <RIGHT_CONTAINER>    TYPE REF TO cl_gui_container,
+      <ALV_LEFT>           TYPE REF TO cl_gui_alv_grid,
+      <ALV_RIGHT>          TYPE REF TO cl_gui_alv_grid.
 
+*************** Splitter Container ****************
+CREATE OBJECT <SPLITTER_CONTAINER>
+  EXPORTING
+    parent  = <PARENT_CONTAINER>
+    rows    = <ROW_COUNT>
+    columns = <COLUMN_COUNT>.
+
+*************** Split 영역 Container 획득 ****************
+CALL METHOD <SPLITTER_CONTAINER>->get_container
+  EXPORTING
+    row    = <ROW_NO>
+    column = <COL_NO_LEFT>
+  RECEIVING
+    container = <LEFT_CONTAINER>.
+
+CALL METHOD <SPLITTER_CONTAINER>->get_container
+  EXPORTING
+    row    = <ROW_NO>
+    column = <COL_NO_RIGHT>
+  RECEIVING
+    container = <RIGHT_CONTAINER>.
+
+*************** Split 영역에 ALV 생성 ****************
+CREATE OBJECT <ALV_LEFT>
+  EXPORTING
+    i_parent = <LEFT_CONTAINER>.
+CREATE OBJECT <ALV_RIGHT>
+  EXPORTING
+    i_parent = <RIGHT_CONTAINER>.
+```
 </br>
 </br>
 
