--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -230,9 +230,7 @@ START-OF-SELECTION.
 DATA: OK_CODE TYPE sy-ucomm,
       go_dock TYPE REF TO cl_gui_docking_container,
       go_alv TYPE REF TO cl_gui_alv_grid.
-
-DATA: gs_sflight TYPE sflight,
-      gt_sflight TYPE TABLE OF sflight.
+DATA: gt_sflight TYPE TABLE OF sflight.
 
 PARAMETERS: pa_car TYPE sflight-carrid DEFAULT 'AZ'.
 ```
