Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -134,13 +134,13 @@ CREATE OBJECT <SPLITTER_CONTAINER>
     columns = <COLUMN_COUNT>.
 
 *************** Split 영역 Container 획득 ****************
-CALL METHOD <SPLITTER_CONTAINER>->get_container
+CALL METHOD <SPLITTER_CONTAINER>->get_container      " 왼쪽
   EXPORTING
     row    = <ROW_NO>
     column = <COL_NO_LEFT>
   RECEIVING
     container = <LEFT_CONTAINER>.
-CALL METHOD <SPLITTER_CONTAINER>->get_container
+CALL METHOD <SPLITTER_CONTAINER>->get_container      " 오른쪽
   EXPORTING
     row    = <ROW_NO>
     column = <COL_NO_RIGHT>
@@ -148,16 +148,17 @@ CALL METHOD <SPLITTER_CONTAINER>->get_container
     container = <RIGHT_CONTAINER>.
 
 *************** Split 영역에 ALV 생성 ****************
-CREATE OBJECT <ALV_LEFT>
+CREATE OBJECT <ALV_LEFT>      " 왼쪽
   EXPORTING
     i_parent = <LEFT_CONTAINER>.
-CREATE OBJECT <ALV_RIGHT>
+CREATE OBJECT <ALV_RIGHT>      " 오른쪾
   EXPORTING
     i_parent = <RIGHT_CONTAINER>.
 ```
 ```abap
 *************** TOP ****************
-DATA: go_splitter TYPE REF TO cl_gui_splitter_container,
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_splitter TYPE REF TO cl_gui_splitter_container,
       go_cont_l   TYPE REF TO cl_gui_container,
       go_cont_r   TYPE REF TO cl_gui_container,
       go_alv_l    TYPE REF TO cl_gui_alv_grid,
