Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -165,25 +165,26 @@ DATA: go_docking TYPE REF TO cl_gui_docking_container,
       go_alv_r    TYPE REF TO cl_gui_alv_grid.
 
 *************** Splitter Container ****************
-CREATE OBJECT go_splitter      " Container 영역 분할 (1행 2열)
-  EXPORTING
-    parent  = go_docking
-    rows    = 1
-    columns = 2.
+CREATE OBJECT go_splitter            " Container 영역 분할 (1행 2열로)
+EXPORTING parent  = go_docking
+        rows    = 1
+        columns = 2.
 
 *************** Split 영역 Container 획득 ****************
 CALL METHOD go_splitter->get_container      " 왼쪽 영역 컨테이너
-  EXPORTING
-    row    = 1
-    column = 1
-  RECEIVING
-    container = go_cont_l.
+EXPORTING row    = 1
+          column = 1
+RECEIVING container = go_cont_l.
 CALL METHOD go_splitter->get_container      " 오른쪽 영역 컨테이너
-  EXPORTING
-    row    = 1
-    column = 2
-  RECEIVING
-    container = go_cont_r.
+EXPORTING row    = 1
+          column = 2
+RECEIVING container = go_cont_r.
+
+*************** Split 영역에 ALV 생성 ****************
+CREATE OBJECT go_alv_l
+EXPORTING i_parent = go_cont_l.
+CREATE OBJECT go_alv_r
+EXPORTING i_parent = go_cont_r.
 ```
 </br>
 </br>
