Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -334,4 +334,11 @@ ENDMODULE.
 </br>
 
 ### 실습 2
+</br>
+
+- 문제
+<img width="375" height="211" alt="image" src="https://github.com/user-attachments/assets/35366416-f53f-409b-aefc-f01a85efd359" />
+</br>
+</br>
+</br>
 
