Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -1,7 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ㅁ**
+- **1) Docking Container 기반 ALV 화면 구성**
+
 
 </br>
 </br>
@@ -133,74 +134,7 @@ CREATE OBJECT <SPLITTER_CONTAINER>
     rows    = <ROW_COUNT>
     columns = <COLUMN_COUNT>.
 
-*************** Split 영역 Container 획득 ****************
-CALL METHOD <SPLITTER_CONTAINER>->get_container      " 왼쪽
-  EXPORTING
-    row    = <ROW_NO>
-    column = <COL_NO_LEFT>
-  RECEIVING
-    container = <LEFT_CONTAINER>.
-CALL METHOD <SPLITTER_CONTAINER>->get_container      " 오른쪽
-  EXPORTING
-    row    = <ROW_NO>
-    column = <COL_NO_RIGHT>
-  RECEIVING
-    container = <RIGHT_CONTAINER>.
-
-*************** Split 영역에 ALV 생성 ****************
-CREATE OBJECT <ALV_LEFT>      " 왼쪽
-  EXPORTING
-    i_parent = <LEFT_CONTAINER>.
-CREATE OBJECT <ALV_RIGHT>      " 오른쪾
-  EXPORTING
-    i_parent = <RIGHT_CONTAINER>.
-```
-```abap
-*************** TOP ****************
-DATA: go_docking TYPE REF TO cl_gui_docking_container,
-      go_splitter TYPE REF TO cl_gui_splitter_container,
-      go_cont_l   TYPE REF TO cl_gui_container,
-      go_cont_r   TYPE REF TO cl_gui_container,
-      go_alv_l    TYPE REF TO cl_gui_alv_grid,
-      go_alv_r    TYPE REF TO cl_gui_alv_grid.
-
-*************** Splitter Container ****************
-CREATE OBJECT go_splitter            " Container 영역 분할 (1행 2열로)
-EXPORTING parent  = go_docking
-        rows    = 1
-        columns = 2.
-
-*************** Split 영역 Container 획득 ****************
-CALL METHOD go_splitter->get_container      " 왼쪽 영역 컨테이너
-EXPORTING row    = 1
-          column = 1
-RECEIVING container = go_cont_l.
-CALL METHOD go_splitter->get_container      " 오른쪽 영역 컨테이너
-EXPORTING row    = 1
-          column = 2
-RECEIVING container = go_cont_r.
-
-*************** Split 영역에 ALV 생성 ****************
-CREATE OBJECT go_alv_l
-EXPORTING i_parent = go_cont_l.
-CREATE OBJECT go_alv_r
-EXPORTING i_parent = go_cont_r.
-```
-</br>
-</br>
-
----
-
-</br>
-
-## < 실습 코드 >
-</br>
-
-### 실습 1
-</br>
-
-- 문제
-<img width="356" height="196" alt="image" src="https://github.com/user-attachments/assets/4888e9dc-6d7b-43c1-ac54-52f8f3c76a29" />
+*************** Split 영습*************** Split 영t="196" alt="image" src="https://github.com/user-attachments/assets/4888e9dc-6d7b-43c1-ac54-52f8f3c76a29" />
 </br>
 </br>
 </br>
@@ -337,6 +271,8 @@ ENDMODULE.
 </br>
 
 - 문제
+- 실습 1 에 이어서 작성
+- 
 <img width="319" height="179" alt="image" src="https://github.com/user-attachments/assets/2f97f26e-d2c7-4b2e-88ff-5a55c8532123" />
 
 </br>
