--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -120,6 +120,7 @@ START-OF-SELECTION.
 </br>
 
 ### 2) Splitter Container 기반 다중 ALV 구성
+- 하나의 화면(또는 Docking 영역)을 여러 영역으로 나눠, 각 영역에 서로 다른 ALV를 동시에 보여주기 위해 사용
 ```abap
 *************** TOP ****************
 DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
