Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -121,6 +121,8 @@ START-OF-SELECTION.
 
 ### 2) Splitter Container 기반 다중 ALV 구성
 - 하나의 화면(또는 Docking 영역)을 여러 영역으로 나눠, 각 영역에 서로 다른 ALV를 동시에 보여주기 위해 사용
+- `cl_gui_splitter_container` : 하나의 컨테이너를 행·열로 분할해 여러 영역을 동시에 사용할 수 있게 해주는 컨테이너 클래스
+- `->get_container` : Splitter로 나뉜 특정 행·열 위치의 하위 컨테이너를 가져오는 메서드
 ```abap
 *************** TOP ****************
 DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
