Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -343,8 +343,175 @@ ENDMODULE.
 </br>
 
 - 문제
-<img width="319" height="179" alt="image" src="https://github.com/user-attachments/assets/2f97f26e-d2c7-4b2e-88ff-5a55c8532123" />
+<img width="330" height="183" alt="image" src="https://github.com/user-attachments/assets/254b894d-5b6d-443b-8bf2-5ab47bb16ce7" />
 
 </br>
 </br>
 </br>
+
+**1) Report 프로그램에서 모듈 수정**
+```abap
+REPORT ZPROGB03_0031.
+
+INCLUDE ZPROGB03_0031_TOP.
+INCLUDE ZPROGB03_0031_C01.
+INCLUDE ZPROGB03_0031_O01.
+INCLUDE ZPROGB03_0031_I01.
+INCLUDE ZPROGB03_0031_F01.
+
+START-OF-SELECTION.
+  PERFORM get_data2.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm,
+      go_dock TYPE REF TO cl_gui_docking_container,
+      go_splitter TYPE REF TO cl_gui_splitter_container,
+      go_cont_l TYPE REF TO cl_gui_container,
+      go_cont_r TYPE REF TO cl_gui_container,
+      go_alv_l TYPE REF TO cl_gui_alv_grid,
+      go_alv_r TYPE REF TO cl_gui_alv_grid.
+```
+</br>
+
+**3) `F01` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_F01
+*&---------------------------------------------------------------------*
+
+*************** SFLIGHT 데이터ㅗ ****************
+FORM get_data.
+  READ TABLE gt_spfli INTO gs_spfli INDEX gv_index.
+
+  SELECT * FROM SFLIGHT
+    INTO TABLE gt_sflight
+    UP TO 30 ROWS
+    WHERE carrid = gs_spfli-carrid
+      AND connid = gs_spfli-connid.
+ENDFORM.
+
+*************** SPFLI 데이터 ****************
+FORM get_data2.
+  SELECT * FROM SPFLI
+    INTO TABLE gt_spfli
+    UP TO 30 ROWS
+    WHERE carrid = pa_car.
+ENDFORM.
+
+*************** REFRESH ****************
+FORM set_refresh.
+  CALL METHOD go_alv_l->refresh_table_display
+    EXCEPTIONS
+      finished       = 1
+      others         = 2.
+  IF sy-subrc <> 0.
+    MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+  ENDIF.
+
+  CALL METHOD go_alv_r->refresh_table_display
+    EXCEPTIONS
+      finished       = 1
+      others         = 2.
+  IF sy-subrc <> 0.
+    MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+```
+</br>
+
+**4) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: ON_DOUBLE_CLICK
+    FOR EVENT DOUBLE_CLICK OF CL_GUI_ALV_GRID
+    IMPORTING ES_ROW_NO SENDER.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD ON_DOUBLE_CLICK.
+    IF SENDER = GO_ALV_L.
+      gv_index = ES_ROW_NO-row_id.
+      PERFORM get_data.
+      PERFORM set_refresh.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**5) `PBO` 모듈 수정**
+```abap
+MODULE init_alv OUTPUT.
+  IF go_dock IS INITIAL.
+    CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
+    CREATE OBJECT go_splitter
+    EXPORTING parent = go_dock
+              rows = 1
+              columns = 2.
+
+    CALL METHOD go_splitter->get_container
+    EXPORTING row = 1
+              column = 1
+    RECEIVING container = go_cont_l.
+    CALL METHOD go_splitter->get_container
+    EXPORTING row = 1
+              column = 2
+    RECEIVING container = go_cont_r.
+
+    CREATE OBJECT go_alv_l
+    EXPORTING i_parent = go_cont_l.
+    CREATE OBJECT go_alv_r
+    EXPORTING i_parent = go_cont_r.
+
+    SET HANDLER lcl_event_handler=>on_double_click FOR go_alv_l.
+
+    CALL METHOD go_alv_r->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_sflight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+
+    PERFORM get_data.
+    CALL METHOD go_alv_l->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SPFLI'
+      CHANGING
+        it_outtab                     = gt_spfli
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
