Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -408,14 +408,6 @@ ENDFORM.
 
 *************** REFRESH ****************
 FORM set_refresh.
-  CALL METHOD go_alv_l->refresh_table_display
-    EXCEPTIONS
-      finished       = 1
-      others         = 2.
-  IF sy-subrc <> 0.
-    MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
-  ENDIF.
-
   CALL METHOD go_alv_r->refresh_table_display
     EXCEPTIONS
       finished       = 1
@@ -454,8 +446,14 @@ ENDCLASS.
 
 **5) `PBO` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_O01
+*&---------------------------------------------------------------------*
+
 MODULE init_alv OUTPUT.
   IF go_dock IS INITIAL.
+
+*************** Docking Container 생성 ****************
     CREATE OBJECT go_dock
       EXPORTING
         repid                       = sy-repid
@@ -463,11 +461,13 @@ MODULE init_alv OUTPUT.
         side                        = cl_gui_docking_container=>dock_at_bottom
         extension                   = 300.
 
+*************** Splitter 생성 (1행 2열) ****************
     CREATE OBJECT go_splitter
     EXPORTING parent = go_dock
               rows = 1
               columns = 2.
 
+*************** Split 영역 Container 획득 ****************
     CALL METHOD go_splitter->get_container
     EXPORTING row = 1
               column = 1
@@ -477,11 +477,13 @@ MODULE init_alv OUTPUT.
               column = 2
     RECEIVING container = go_cont_r.
 
+*************** Split 영역에 ALV 생성 ****************
     CREATE OBJECT go_alv_l
     EXPORTING i_parent = go_cont_l.
     CREATE OBJECT go_alv_r
     EXPORTING i_parent = go_cont_r.
 
+*************** 데이터 조회 ****************
     SET HANDLER lcl_event_handler=>on_double_click FOR go_alv_l.
 
     CALL METHOD go_alv_r->set_table_for_first_display
